--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,25 @@
+[init]
+	defaultBranch = main
+
+[commit]
+	gpgsign = true
+
+[includeIf "gitdir:~/code/Armament8/"]
+	path = ~/.gitconfig.Armament8
+
+[includeIf "gitdir:~/code/ASCCON/"]
+	path = ~/.gitconfig.ASCCON
+
+[includeIf "gitdir:~/code/"]
+	path = ~/.gitconfig.WGD
+
 [user]
-	name = Walter G Davies - ASCCON
-	email = wgd@asccon.co
-	signingkey = 854A266F4D5A6AC1
 	useConfigOnly = true
+
 [core]
 	excludesfile = /Users/wgd/.gitignore_global
 	editor = nano
+
 [alias]
 	ptag = !git tag -f -a $1 -m $1 && git push --tags --force && git show --pretty=short --no-patch $1
 	ctag = rev-list -n 1
@@ -23,38 +37,45 @@
 	poll = !git fetch > /dev/null 2>&1 && git rev-list --left-right --count $(git rev-parse --abbrev-ref HEAD)...origin/$(git rev-parse --abbrev-ref HEAD)
 	hist = log --all --decorate --oneline --graph
 	nb = !sh -c 'git checkout -b $1 && git push -u origin $1' -
-[transfer]
-	fsckObjects = true
+
 [push]
 	default = current
 	autoSetupRemote = true
+
+[pull]
+	rebase = false
+
+[transfer]
+	fsckObjects = true
+
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	required = true
 	process = git-lfs filter-process
+
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
+
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+
 [merge]
 	tool = opendiff
+
 [diff]
 	tool = meld
-[pull]
-	rebase = false
-[init]
-	defaultBranch = main
+
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
+
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
-[commit]
-	gpgsign = true
+
 ## Hack for forcing SSH connexions over HTTPS.
 [url "ssh://git@github.com/"]
 	insteadOf = https://github.com/
