.gitconfig: further fiddling  * Rename ASCCON to ASC like it should have been.  * Made same update in .gitconfig.

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 	path = ~/.gitconfig.ARM8
 
 [includeIf "gitdir:~/code/ASCCON/"]
-	path = ~/.gitconfig.ASCCON
+	path = ~/.gitconfig.ASC
 
 [includeIf "gitdir:~/code/"]
 	path = ~/.gitconfig.WGD
