More Git Config Craziness!  * Finally figuring this out....  * .gitconfig: Even though it is a _little_ bit annoying, separating things out _completely_ under `~/code/` makes this whole exercise a _lot_ easier!    + .gitconfig.*: Updated each with the updated TLD (under `~/code/`) *and* a new custom Git config attribute: `user.alias`.  * .kshrc: Added awareness of Git `user.alias` to the Git Info strip in the prompt. Now I can tell who I am at a glance!

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,13 +4,13 @@
 [commit]
 	gpgsign = true
 
-[includeIf "gitdir:~/code/Armament8/"]
+[includeIf "gitdir:~/code/ARM8/"]
 	path = ~/.gitconfig.ARM8
 
-[includeIf "gitdir:~/code/ASCCON/"]
+[includeIf "gitdir:~/code/ASC/"]
 	path = ~/.gitconfig.ASC
 
-[includeIf "gitdir:~/code/"]
+[includeIf "gitdir:~/code/WGD/"]
 	path = ~/.gitconfig.WGD
 
 [user]
