--- a/.gitconfig
+++ b/.gitconfig
@@ -77,5 +77,5 @@
 	trustExitCode = true
 
 ## Hack for forcing SSH connexions over HTTPS.
-[url "ssh://git@github.com/"]
-	insteadOf = https://github.com/
+#[url "ssh://git@github.com/"]
+	#insteadOf = https://github.com/
